# BrainTissuesExtension

./: CMakeLists.txt  README.md
BasicBrainTissues/: BasicBrainTissues.cxx  BasicBrainTissues.xml  CMakeLists.txt
BrainLogisticSegmentation/: BrainLogisticSegmentation.cxx  BrainLogisticSegmentation.xml  CMakeLists.txt
BrainStructuresSegmenter/: BrainStructuresSegmenter.py  CMakeLists.txt
